--- a/PoliciaSimulator.html
+++ b/PoliciaSimulator.html
@@ -173,27 +173,31 @@
     </script>
     <br><br><br><br>
     <br> Fim do Jogo <br>
-    <br> Resultados :
-    <br>
+    
     <script>
         if(Resultado == 'fome')
         {
+            document.write("<br><br>Resultado : Final Triste");
             document.write("<br> Morreu de fome perante egoismo de um gato.");
         }
         if(Resultado == 'velha solitaria')
         {
+            document.write("<br><br>Resultado : Final Egoista");
             document.write("<br> Se tornou famoso e rico as custas do fim de uma linda amizade.");
         }
         if(Resultado == 'todos morrem')
         {
+            document.write("<br><br>Resultado : Final Trágico");
             document.write("<br>Não se sabe ao certo o final, pois você morreu.<br> A única certeza que temos é que a velha senhora sentirá muita falta de seu pequeno bichano.");
         }
         if(Resultado == 'felicidade')
         {
+            document.write("<br><br>Resultado : Final Feliz");
             document.write("<br>Apesar de não receber fama, hoje uma senhora vive feliz com seu gato em uma cidade mais segura, e este, foi o seu maior salário.");
         }
         if(Resultado == 'vazio')
         {
+            document.write("<br><br>Resultado : ");
             document.write("<br> Você não obteve um final! Lembre-se : <br> - Não digite letras nas escolhas, apenas os números 1 ou 2 <br> - Não pule as escolhas sem digitar nada!")
         }
     </script>
